set html overflow-x to clip to fix sticky navbar

--- a/src/index.css
+++ b/src/index.css
@@ -436,7 +436,7 @@ hr {
 
 @media (max-width: 600px) {
   html {
-    overflow-x: hidden;
+    overflow-x: clip;
   }
   
   .body {
